--- a/register/index.html
+++ b/register/index.html
@@ -168,7 +168,7 @@
             <button
               class="rounded-full p-3 w-full sm:w-56 bg-gradient-to-r from-sky-600 to-teal-300 text-white text-lg font-semibold"
               type="submit"
-              ondrag="WA_Group()"
+              onclick="WA_Group()"
             >
               Submit
             </button>
