minor change in design

--- a/register/index.html
+++ b/register/index.html
@@ -173,7 +173,7 @@
               Submit
             </button>
           </div>
-          <div class="px-3 text-gray-500">
+          <div class="px-3 hide-mobile text-gray-500">
             After clicking the "Submit" button, you will be redirected to the
             WhatsApp group. Please join for enhanced communication.
           </div>
