mail id -type change

--- a/register/index.html
+++ b/register/index.html
@@ -58,7 +58,7 @@
             </div>
             <div>
               <input
-                type="tel"
+                type="email"
                 class="focus:outline-none border-b w-full pb-2 border-sky-400 placeholder-gray-500 mb-8"
                 placeholder="Mail id of team leader "
                 required
