made it checkbox format

--- a/register/index.html
+++ b/register/index.html
@@ -124,7 +124,7 @@
               <div class="checkbox-container">
                 <label class="checkbox-label">
                   <input
-                    type="radio"
+                    type="checkbox"
                     value=""
                     name="Ed-Tech"
                   />
@@ -132,7 +132,7 @@
                 </label>
                 <label class="checkbox-label">
                   <input
-                    type="radio"
+                    type="checkbox"
                     value=""
                     name=" Open to Innovation"
                   />
