added name value

--- a/register/index.html
+++ b/register/index.html
@@ -147,6 +147,7 @@
                 type="text"
                 class="focus:outline-none border-b w-full pb-2 border-sky-400 placeholder-gray-500"
                 placeholder="Prior Experience in Hackathon(optional) "
+                name="prior experience"
               />
             </div>
             <br />
