--- a/register/index.html
+++ b/register/index.html
@@ -119,13 +119,13 @@
             </div> -->
             <div>
               <label class="pb-2 border-sky-400 placeholder-gray-500 mb-8"
-                >Choose a Track</label
+                >Choose a Track(required)</label
               >
               <div class="checkbox-container">
                 <label class="checkbox-label">
                   <input
                     type="checkbox"
-                    value=""
+                    value="Ed-tech
                     name="Ed-Tech"
                   />
                   1) Ed-Tech
@@ -133,7 +133,7 @@
                 <label class="checkbox-label">
                   <input
                     type="checkbox"
-                    value=""
+                    value="Open to Innovation"
                     name=" Open to Innovation"
                   />
                  2) Open to Innovation
