update  value for cloud database

--- a/register/index.html
+++ b/register/index.html
@@ -34,9 +34,9 @@
               <input
                 type="text"
                 class="focus:outline-none border-b w-full pb-2 border-sky-400 placeholder-gray-500"
-                placeholder="Name of the team members"
+                placeholder="Name of the Team"
                 required
-                name="Name of the team members"
+                name="Name of the team"
               />
             </div>
             <div>
