update in forms

--- a/register/index.html
+++ b/register/index.html
@@ -133,10 +133,10 @@
                 <label class="checkbox-label">
                   <input
                     type="checkbox"
-                    value="Open to Innovation"
-                    name=" Open to Innovation"
+                    value="Open Innovation"
+                    name=" Open Innovation"
                   />
-                 2) Open to Innovation
+                 2) Open Innovation
                 </label>
                 
               </div>
