added community partner btn

--- a/index.html
+++ b/index.html
@@ -813,9 +813,9 @@ Judgement Round with progress and presentation                        </h3>
                   ><img src="images/partners/Cloud Community Group logo.png" alt=""height="120px"
                 /></a>
 
-                <!-- <div class="sponsor-btn text-center">
-                  <a href="#" class="btn">Become a Sponsor</a>
-                </div> -->
+                <div class="sponsor-btn text-center">
+                  <a href="mailto:codeinovact@gmail.com" class="btn">Become a Community Partners</a>
+                </div>
               </div>
            <!-- sponsors logo end-->
          </div>
