--- a/index.html
+++ b/index.html
@@ -981,7 +981,7 @@ Fun Activity Time                                                </h3>
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="sponsors-logo text-center">
-                                    <a href="#"><img src="images/partners/DevCode.jpg" alt="" height="120px" /></a>
+                                    <a href="#"><img src="images/partners/DevCode.png" alt="" height="120px" /></a>
                                     <a href="#"><img src="images/partners/GDG-Ludhiana.png" alt="" height="120px"
                                             width="150px" /></a>
                                     <a href="#"><img src="images/partners/SOS-tech.png" alt="" height="120px" /></a>
