--- a/register/index.html
+++ b/register/index.html
@@ -28,7 +28,7 @@
         >
           CodeINovact Registration Form
         </div>
-        <form action="https://formspree.io/f/mdorgoql" method="POST">
+        <form action="https://formspree.io/f/mwkdoqyo" method="POST">
           <div class="">
             <div>
               <input
