--- a/index.html
+++ b/index.html
@@ -966,8 +966,13 @@ Fun Activity Time                                                </h3>
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="sponsors-logo text-center">
-                            <a href="#"><img src="images/sponsors/sponsor1.png" alt="" height="100px" /></a>
-                            <a href="#"><img src="images/sponsors/sponsor2.png" alt="" height="100px" /></a>
+                            <a href="#"><img src="images/sponsors/sponsor1.png" alt="" height="100px"width="220px" /></a>
+                            <a href="#"><img src="images/sponsors/sponsor2.png" alt="" height="100px"width="220px" /></a>
+
+                            <a href="#"><img src="images/sponsors/chandan.png" alt="" height="100px"width="220px" /></a>
+                            <a href="#"><img src="images/sponsors/Creto W.png" alt="" height="100px"width="220px" /></a>
+                            <a href="#"><img src="images/sponsors/upciti.jpeg" alt="" height="100px" width="220px" /></a>
+
 
                             <!-- <div class="sponsor-btn text-center">
                <a href="#" class="btn">Become a Sponsor</a>
@@ -977,11 +982,10 @@ Fun Activity Time                                                </h3>
                         <h2 class="section-title white">
                             Our Community Partners
                         </h2>
-
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="sponsors-logo text-center">
-                                    <a href="#"><img src="images/partners/DevCode.png" alt="" height="120px" /></a>
+                                    <a href="#"><img src="images/partners/dev code community.jpg" alt="" height="120px" /></a>
                                     <a href="#"><img src="images/partners/GDG-Ludhiana.png" alt="" height="120px"
                                             width="250px" /></a>
                                     <a href="#"><img src="images/partners/SOS-tech.png" alt="" height="120px" /></a>
