--- a/index.html
+++ b/index.html
@@ -299,6 +299,8 @@
                             </h3>
                             <h4 class="funfact-title">Community Partners</h4>
                         </div>
+
+                        
                     </div>
                     <!-- col end-->
                     <div class="col-lg-3 col-md-6">
@@ -970,7 +972,7 @@ Fun Activity Time                                                </h3>
                             <a href="#"><img src="images/sponsors/sponsor2.png" alt="" height="100px"width="220px" /></a>
 
                             <a href="#"><img src="images/sponsors/chandan.png" alt="" height="100px"width="220px" /></a>
-                            <a href="#"><img src="images/sponsors/Creto W.png" alt="" height="100px"width="220px" /></a>
+                            <a href="#"><img src="images/sponsors/Inside out.png" alt="" height="100px"width="220px" /></a>
                             <a href="#"><img src="images/sponsors/upciti.jpeg" alt="" height="100px" width="220px" /></a>
 
 
@@ -979,6 +981,20 @@ Fun Activity Time                                                </h3>
              </div> -->
                         </div>
 
+                        <h2 class="section-title white">
+                            Our Freelance Partners
+                        </h2>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="sponsors-logo text-center">
+
+                                    <a href="#"><img src="images/sponsors/Creto W.png" alt=""
+                                            height="80px" /></a>
+
+                                   
+                                </div>
+                            </div>
+                        </div>
                         <h2 class="section-title white">
                             Our Community Partners
                         </h2>
