added befikra logo

--- a/index.html
+++ b/index.html
@@ -1008,7 +1008,8 @@ Fun Activity Time                                                </h3>
                                     <a href="#"><img src="images/partners/Tech Surfer.webp" alt="" height="120px" /></a>
                                     <a href="#"><img src="images/partners/Cloud Community Group logo.png" alt=""
                                             height="120px" /></a>
-
+                                            <a href="#"><img src="https://media.licdn.com/dms/image/C4D0BAQFEnNdkvP3vxw/company-logo_200_200/0/1631811013012?e=2147483647&v=beta&t=jEEVjXsK0ExialJw-Wj8IZ0SyNQGJNWnOSqeBf4jMIs" alt=""
+                                                height="120px" /></a>
                                     <div class="sponsor-btn text-center">
                                         <a href="mailto:codeinovact@gmail.com" class="btn">Become a Community
                                             Partners</a>
